# nahida

./: .gitignore  .prettierignore  cloudflare.pages.sh  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: rust.yml
app/core/: index.ts  serialize.spec.ts  serialize.ts  types.ts
app/core/parser/: code.spec.ts  code.ts  contents.spec.ts  contents.ts  error.ts  heading.spec.ts  heading.ts  html.spec.ts  html.ts  image.spec.ts  image.ts  index.ts  inlineCode.spec.ts  inlineCode.ts  link.spec.ts  link.ts  list.spec.ts  list.ts  text.spec.ts  text.ts  thematicBreak.spec.ts  thematicBreak.ts
app/parser/: index.ts  serialize.spec.ts  serialize.ts  types.ts  utils.ts
app/parser/story/: code.spec.ts  (+19 more)
app/preact/: animate.ts  audio.ts  callback-stack.ts  index.ts  route.ts  signals.ts  story.ts  utils.ts
app/vite/: index.ts
crates/nahida_bevy/: Cargo.toml
crates/nahida_core/: Cargo.toml
crates/nahida_parser/: Cargo.toml
crates/nahida_wgpu/: Cargo.toml
docs/: book.toml  context.md  grammar.md  index.md
docs/src/: SUMMARY.md  animations.md  grammar.md  introduction.md  location.md  sizes.md
examples/basic/: Cargo.toml
examples/basic/assets/: story.md
examples/basic/assets/shader/: background.wgsl
examples/basic/assets/story/chapter1/: scene1.md
examples/basic/src/: main.rs
src/: app.tsx  index.css  main.tsx  vite-env.d.ts
src/icons/: pause.tsx
src/pages/: game.scss  game.tsx  menu.scss  menu.tsx  settings.scss  settings.tsx
src/story/: intro.md
test/: background.spec.ts  text.spec.ts
(+59 files in other folders)
