[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["wayland"] }
env_logger = "0.10.0"
log = "0.4.17"
nahida_bevy = {path="../../crates/nahida_bevy"}
